objects/EntityAgreementWorkflow__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact who is the recipient of the contract or legal agreement.</description>
        <inlineHelpText>The contact who is the recipient of the contract or legal agreement.</inlineHelpText>
        <label>Destination Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Entity Agreement Workflow Steps</relationshipLabel>
        <relationshipName>ContractWorkflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractStep__c</fullName>
        <description>The step at which this contract or legal agreement sits.</description>
        <inlineHelpText>The step at which this contract or legal agreement sits.</inlineHelpText>
        <label>Step</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed by Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Office of Jurisdiction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryMethod__c</fullName>
        <description>The method by which the contract or legal agreement was delivered.</description>
        <inlineHelpText>The method by which the contract or legal agreement was delivered.</inlineHelpText>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Courier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The date when this workflow step occurred.</description>
        <inlineHelpText>The date when this workflow step occurred.</inlineHelpText>
        <label>Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntityAgreementWorkflowEID__c</fullName>
        <description>The Enterprise ID for this Entity Agreement Workflow Step.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Entity Agreement Workflow Step.</inlineHelpText>
        <label>Entity Agreement Workflow EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EntityAgreement__c</fullName>
        <description>The ID of the contract or legal agreement record that this workflow step is for.</description>
        <inlineHelpText>The ID of the contract or legal agreement record that this workflow step is for.</inlineHelpText>
        <label>Entity Agreement</label>
        <referenceTo>EntityAgreement__c</referenceTo>
        <relationshipLabel>Entity Agreement Workflow Steps</relationshipLabel>
        <relationshipName>ContractWorkflows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TrackingCode__c</fullName>
        <description>If applicable, the tracking number used by the delivery service.</description>
        <inlineHelpText>If applicable, the tracking number used by the delivery service.</inlineHelpText>
        <label>Tracking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Entity Agreement Workflow Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Entity Agreement Workflow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Agreement Workflow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>